<resources>
    <string name="app_name">TienditAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">LogIn</string>
    <string name="registro">Registro</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registro">Registro</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="email">Ingresa tu correo</string>
    <string name="correo1">Ingresa tu correo</string>
    <string name="proveedor">Proveedores</string>
    <string name="producto">Productos</string>
    <string name="reporte">Reportes</string>
    <string name="perfil">Mi Perfil</string>
    <string name="logout">LogOut</string>
    <string name="ContrseñaInvalida">Contraseña o usuario erroneos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrareg">ingrese su contraseña</string>
</resources>