<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
    android:id="@+id/nav_home"
    android:icon="@drawable/home_icon"
    android:title="@string/menu_home" />
    <item
    android:id="@+id/nav_productos"
    android:icon="@drawable/productos_icon"
    android:title="@string/producto" />
    <item
    android:id="@+id/nav_proveedor"
    android:icon="@drawable/proveedor_icon"
    android:title="@string/proveedor" />
    <item
    android:id="@+id/nav_reporte"
    android:icon="@drawable/resporte_icon"
    android:title="@string/reporte" />


    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/loging_icon"
        android:title="@string/login" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/perfil_icon"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout" />





</menu>